--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ Jinja2==3.1.6
 MarkupSafe==3.0.2
 pycparser==2.22
 PyMySQL==1.1.1
+PyYAML==6.0.2
 setuptools==78.1.1
 SQLAlchemy==2.0.41
 typing_extensions==4.14.1
